Primera entrega DS. Santiago Gallo

--- a/ProyectoDS_Partel_+Gallo.ipynb
+++ b/ProyectoDS_Partel_+Gallo.ipynb
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 206,
       "metadata": {
         "id": "wBWFlW3_WbQs"
       },
@@ -93,7 +93,9 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "sns.set_theme(style=\"whitegrid\")"
+        "import warnings\n",
+        "sns.set_theme(style=\"whitegrid\")\n",
+        "warnings.filterwarnings('ignore')"
       ]
     },
     {
@@ -1211,7 +1213,7 @@
       "cell_type": "markdown",
       "source": [
         "# **Depósito a plazo por mes**\n",
-        "En primera instancia, para tener una referencia, se muestra en un gráfico de torta como la menor parte del las veces se llega a un depósito de plazo. A partir de aquí, se trabajará en los proximos gráficos mayormente en el análisis de quienes sí realizaron un depósito."
+        "En primera instancia, para tener una referencia, se muestra en un gráfico de torta como la menor parte del las veces no se realizan depósitos en respuesta al llamdono. A partir de aquí, se trabajará en los proximos gráficos mayormente en el análisis de quienes sí realizaron un depósito."
       ],
       "metadata": {
         "id": "JQhX1-YUmYlN"
@@ -1251,8 +1253,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Depósitos deplazo por mes**\n",
-        "Es posible visualizar a lo largo del  año en que meses los clientes suscribieron depósitos a plazo y en que cantidad, comparandolos. La idea es buscar patrones para responder a la pregunta \"¿El mes de contacto tiene algún tipo de impacto en la respuesta del cliente?\". En el cual es claro como en Mayo hay un claro pico de depósitos comparado con los otros meses."
+        "# **Depósitos de plazo por mes**\n",
+        "Es posible visualizar a lo largo del  año en que meses los clientes suscribieron depósitos a plazo y en que cantidad, comparandolos. La idea es buscar patrones para responder a la pregunta \"¿El mes de contacto tiene algún tipo de impacto en la respuesta del cliente?\". En el cual es claro como en Mayo hay un pico de depósitos comparado con los otros meses."
       ],
       "metadata": {
         "id": "ja8Jz4AfkLFE"
@@ -1297,7 +1299,7 @@
       "cell_type": "markdown",
       "source": [
         "# **Depósitos a plazo por edad**\n",
-        "A continuación se encuentra información sobre los depósitos que realizan las personas dependiendo de su edad, con el fin de responder a la pregunta \"¿La edad influye en la probabilidad de contratar un depósito a plazo o no tiene relación?\". Donde en primera instancia se encuentra un gráfico donde se demuestra la cantidad de personas por edad para tener una idea más clara de la distribución. Luego, un gráfico que muestra la cantidad de personas que realizó un depósito a plazo agrupados por rango de edad para una visualización de los datos mas sencilla. Finalmente, es posible concluír que aunque no hay mucha diferencia, las personas entre 26 y 35 años hacen más depósitos a plazo. Igualmente hay que tener encuenta que en ese rango de edad hay mas personas que en los demás."
+        "A continuación se encuentra información sobre los depósitos que realizan las personas dependiendo de su edad, con el fin de responder a la pregunta \"¿La edad influye en la probabilidad de contratar un depósito a plazo o no tiene relación?\". En primera instancia se encuentra un gráfico donde se demuestra la cantidad de personas por edad para tener una idea más clara de la distribución. Luego, un gráfico que muestra la cantidad de personas que realizó un depósito a plazo agrupados por rango de edad para una visualización de los datos mas sencilla. Finalmente, es posible concluír que aunque no hay mucha diferencia, las personas entre 26 y 35 años hacen más depósitos a plazo. Igualmente hay que tener en cuenta que en ese rango de edad hay mas personas que en los demás."
       ],
       "metadata": {
         "id": "-fbxq-vEJyRS"
@@ -1389,21 +1391,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 628
+          "height": 573
         },
         "id": "k9Vka-TkHYaq",
-        "outputId": "f76d17d4-3aa7-4a80-cd1d-0b5e635e95fe"
+        "outputId": "2bb34bce-8158-4414-854b-a89d22b70bbb"
       },
-      "execution_count": 176,
+      "execution_count": 209,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-176-b4141a1ff7e0>:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-            "  df_agrupación = df.groupby(['rango_edad', 'Target']).size().reset_index(name='cantidad')\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -1420,7 +1414,7 @@
       "cell_type": "markdown",
       "source": [
         "# **Cantidad de depósitos a plazo por edad y tipo de llamada**\n",
-        "El objetivo del siguiente gráfico es ver si el tipo de llamada tiene alguna influencia sobre la cantidad de depósitos a plazo, donde también están separados por rango de edad para buscar patrones. Este análisis está enfocado en la pregunta \"¿El tipo de contacto (celular/teléfono fijo) influye en el éxito?\". En conclusión, se destaca como las llamadas por celular tienen un mayor éxito en comparación con las que se hacen por teléfono."
+        "El objetivo del siguiente gráfico es ver si el tipo de llamada tiene alguna influencia sobre la cantidad de depósitos a plazo, donde también están separados por rango de edad para buscar patrones. Este análisis está enfocado en la pregunta \"¿El tipo de contacto (celular/teléfono fijo) influye en el éxito?\". En conclusión, se destaca como las llamadas por celular tienen un mayor éxito en comparación con las que se hacen por teléfono fijo."
       ],
       "metadata": {
         "id": "acBNG5LlYnL4"
@@ -1441,26 +1435,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 715
+          "height": 573
         },
         "id": "XPZ9P6_cTAvJ",
-        "outputId": "078db5a6-d994-48df-8e77-629f36294bb6"
+        "outputId": "5ae49f5b-a160-413d-bf79-95ea1252da6c"
       },
-      "execution_count": 177,
+      "execution_count": 208,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-177-416eb4a54a7d>:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-            "  df_agrupación = df.groupby(['rango_edad', 'contact', 'Target']).size().reset_index(name='cantidad')\n",
-            "<ipython-input-177-416eb4a54a7d>:3: FutureWarning: \n",
-            "\n",
-            "The `ci` parameter is deprecated. Use `errorbar=None` for the same effect.\n",
-            "\n",
-            "  sns.barplot(x='rango_edad', y='cantidad', hue='contact', data=df_agrupación, palette=\"Set2\", ci=None)\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -1498,24 +1479,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 753
+          "height": 666
         },
         "id": "UO0hTwEHdUSq",
-        "outputId": "060cfa9a-1ba8-4856-84aa-2641020faed0"
+        "outputId": "3a552490-9c3d-4a08-8306-1121fc020b3e"
       },
-      "execution_count": 184,
+      "execution_count": 207,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-184-354e9f3cc851>:3: FutureWarning: \n",
-            "\n",
-            "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
-            "\n",
-            "  sns.boxplot(data=df_agrupación, x='job', y='cantidad', palette='magma')\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -1532,7 +1502,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUeD7KRtMvh/ycnZEu9gg0",
+      "authorship_tag": "ABX9TyNirr+IrduAg8cwoenEK/2i",
       "include_colab_link": true
     },
     "kernelspec": {
